--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="./styles/common.css">
     <link rel="icon" type="image/x-icon" href="/assets/images/nuwan-dev.png">
     <!-- carousel -->
     <link rel="stylesheet" href="/assets/other/carousel/owl.carousel.min.css">
@@ -118,7 +119,7 @@
         <div class="work-exp">
             <div class="exp-det">
                 <h3>Work Experience</h3>
-                <p>This is my best working experience <span>for 2 years.</span></p>
+                <p>This is my best working experience <span>for 3 years.</span></p>
             </div>
             <img src="./assets/images/ipad-img.png" alt="" class="exp-img">
         </div>
@@ -128,21 +129,21 @@
     <div class="nuone-tech-container">
         <div class="techs">
             <div class="tech tech-1">
-                <h2>VS<br> Code</h2>
-                <h3>Web Developer |<br> Programmer</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-            <div class="tech tech-2">
-                <h2>VS<br> Code</h2>
-                <h3>Web Developer |<br> Programmer</h3>
-                <h4>Dec 2016- Mar 2018</h4>
+                <h2>Web Developer</h2>
+                <h3>Visionary Design Vanguard </h3>
+                <h4>April 2022 – September 2023</h4>
             </div>
             <div class="tech tech-3">
-                <h2>VS<br> Code</h2>
-                <h3>Web Developer |<br> Programmer</h3>
-                <h4>Dec 2016- Mar 2018</h4>
+                <h2>Web Developer</h2>
+                <h3>Freelance</h3>
+                <h4>September 2023 – June 2024</h4>
             </div>
-            <div class="tech tech-4">
+            <div class="tech tech-2">
+                <h2>Senior Web Developer</h2>
+                <h3>Visionary Design Vanguard </h3>
+                <h4>June 2024 – Present</h4>
+            </div>
+            <!-- <div class="tech tech-4">
                 <h2>VS<br> Code</h2>
                 <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
@@ -151,7 +152,7 @@
                 <h2>VS<br> Code</h2>
                 <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -163,28 +164,42 @@
                 <div class="project-img"></div>
                 <div class="project-txt">
                     <h4>Athlete 360</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <a href="https://nuwan-dev.github.io/athlete360/" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project project-2">
                 <div class="project-img"></div>
                 <div class="project-txt">
                     <h4>Hotel Kingland</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <a href="https://hotelkingland.com/" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project project-3">
                 <div class="project-img"></div>
                 <div class="project-txt">
                     <h4>Gym Web Frontend</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <a href="https://nuwan-dev.github.io/Gym/" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project project-4">
                 <div class="project-img"></div>
                 <div class="project-txt">
-                    <h4>Project-4</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <h4>Ned Patchett Tree care</h4>
+                    <a href="https://nedpatchettconsulting.com/" target="_blank">View Project</a>
+                </div>
+            </div>
+            <div class="project project-5">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Blue Lanka Tours</h4>
+                    <a href="https://www.bluelankatours.com/" target="_blank">View Project</a>
+                </div>
+            </div>
+             <div class="project project-6">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Gamini B Dodanwela Associates</h4>
+                    <a href="https://www.gbda.lk/" target="_blank">View Project</a>
                 </div>
             </div>
         </div>
@@ -225,7 +240,9 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com" class="pd-cv-btn">nuwanchandrasekara99@gmail.com</a> or whatsapp <span onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293 8630</span>.
+                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com"
+                    class="pd-cv-btn">nuwanchandrasekara99@gmail.com</a> or whatsapp <span
+                    onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293 8630</span>.
                 I’m currently available for projects. <span>Thankyou</span></p>
             <button onclick="sayHi('Hi, I would like to know ')">Get in Touch</button>
         </div>
@@ -249,7 +266,9 @@
     <!-- dev note -->
     <div class="nuone-dev-note">
         <div class="dev-note">
-            <h3>The site is undergoing a redesign phase, don't hesitate to <span onclick="sayHi('Hi, I would like to know ')" class="dev-note-sp" target="_blank" title="nuone whatsapp">get in touch with me</span> for any information!
+            <h3>The site is undergoing a redesign phase, don't hesitate to <span
+                    onclick="sayHi('Hi, I would like to know ')" class="dev-note-sp" target="_blank"
+                    title="nuone whatsapp">get in touch with me</span> for any information!
                 Thank you. 😇</h3>
         </div>
     </div>
