--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <nav class="top-nav">
             <a href="#" class="top-nav-logo">ND.</a>
             <div class="top-nav-links">
-                <a href="#">Home</a>
+                <a href="https://nuwan-dev.github.io/">Home</a>
                 <!-- <a href="#">Portfolio</a> -->
-                <a href="#">Work</a>
-                <!-- <a href="#">Blog</a> -->
-                <a href="#">Social Media</a>
-                <a href="#">Contact</a>
+                <a href="#workExp">Work Experience</a>
+                <a href="#recentProjects">Recent Project</a>
+                <!-- <a href="#socialMedia">Social Media</a> -->
+                <a href="#contact">Contact</a>
             </div>
             <div class="whatsapp-container">
                 <a href="#" onclick="sayHi('Hi, I would like to know ')" class="top-nav-whatsapp"><img
@@ -49,12 +49,12 @@
             <img src="./assets/icons/mobile-menu-icon.png" alt="" class="mb-menu-btn">
         </div>
         <nav class="mob-nav-links">
-            <a href="#">Home</a>
+            <a href="https://nuwan-dev.github.io/">Home</a>
             <!-- <a href="#">Portfolio</a> -->
-            <a href="#">Work</a>
-            <!-- <a href="#">Blog</a> -->
-            <a href="#">Social Media</a>
-            <a href="#">Contact</a>
+            <a href="#workExp">Work Experience</a>
+            <a href="#recentProjects">Recent Project</a>
+            <!-- <a href="#socialMedia">Social Media</a> -->
+            <a href="#contact">Contact</a>
         </nav>
     </div>
 
@@ -115,7 +115,7 @@
     </div>
 
     <!-- work experience container -->
-    <div class="nuone-work-exp-container">
+    <div class="nuone-work-exp-container" id="workExp">
         <div class="work-exp">
             <div class="exp-det">
                 <h3>Work Experience</h3>
@@ -157,7 +157,7 @@
     </div>
 
     <!-- projects container -->
-    <div class="nuone-projects-container">
+    <div class="nuone-projects-container" id="recentProjects">
         <h2>Recent <strong>Project</strong></h2>
         <div class="projects">
             <div class="project project-1">
@@ -195,10 +195,10 @@
                     <a href="https://www.bluelankatours.com/" target="_blank">View Project</a>
                 </div>
             </div>
-             <div class="project project-6">
+            <div class="project project-6">
                 <div class="project-img"></div>
                 <div class="project-txt">
-                    <h4>Gamini B Dodanwela Associates</h4>
+                    <h4>GBD Associates</h4>
                     <a href="https://www.gbda.lk/" target="_blank">View Project</a>
                 </div>
             </div>
