--- a/index.html
+++ b/index.html
@@ -235,13 +235,12 @@
     </div>
 
     <!-- touch container -->
-    <div class="nuone-touch-container">
+    <div class="nuone-touch-container" id="contact">
         <div class="touch">
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com"
-                    class="pd-cv-btn">nuwanchandrasekara99@gmail.com</a> or whatsapp <span
+                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com">nuwanchandrasekara99@gmail.com</a> or whatsapp <span
                     onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293 8630</span>.
                 I’m currently available for projects. <span>Thankyou</span></p>
             <button onclick="sayHi('Hi, I would like to know ')">Get in Touch</button>
@@ -263,7 +262,7 @@
         </button>
     </div>
 
-    <!-- dev note -->
+    <!-- dev note 
     <div class="nuone-dev-note">
         <div class="dev-note">
             <h3>The site is undergoing a redesign phase, don't hesitate to <span
@@ -271,7 +270,7 @@
                     title="nuone whatsapp">get in touch with me</span> for any information!
                 Thank you. 😇</h3>
         </div>
-    </div>
+    </div> -->
 
     <!-- javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
