--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
             <img src="/assets/images/nuwan avatar.png" class="porfolio-image">
             <div class="portfolio-details">
                 <h3>The Web Developer</h3>
-                <p>I have a strong educational background in computer science and web development, and extensive
-                    experience in various aspects of building and maintaining websites and web applications. This
-                    includes front-end development, back-end development, database design, and user interface/user
-                    experience (UI/UX) design. I strongly believe that good web development should always consider the
-                    client's needs and objectives, be user-friendly, and follow best practices for performance and
-                    security.</p>
+                <p>I’m a skilled Web Developer with 3+ years in WordPress, crafting responsive sites for SMBs using
+                    Divi/Elementor. I excel in custom CSS/SCSS, jQuery animations (boosting engagement 25%), and SEO
+                    with Yoast for better rankings. Adaptable to Wix/Shopify, I’m proficient in HTML, CSS, JavaScript,
+                    jQuery, and AI-driven development. Pursuing a BSc in IT and a Full-Stack Bootcamp, I deliver
+                    user-focused, secure, and high-performing sites. Collaborating globally, I meet all deadlines,
+                    ensuring client goals are met with intuitive, branded designs.</p>
                 <div class="pd-btns">
-                    <a href="mailto:nuwanc.email@gmail.com" class="pd-cv-btn">Email me</a>
+                    <a href="mailto:nuwanchandrasekara99@gmail.com" class="pd-cv-btn">Email me</a>
                     <a href="#" onclick="sayHi('Hi, I would like to know ')" class="pd-learn-btn">Learn more</a>
                 </div>
             </div>
@@ -208,8 +208,7 @@
     <!-- dark container -->
     <div class="nuone-dark-container">
         <h2>The Web Developer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum expedita cupiditate eveniet cum tempora
-            velit et veritatis laudantium placeat itaque.</p>
+        <p>Crafting sleek websites with flair, blending SEO mastery and custom code for standout business growth.</p>
         <div class="dark">
             <div class="icon icon-1">
                 <div><img src="/assets/icons/image 4 (Traced).svg" alt=""></div>
@@ -240,8 +239,9 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com">nuwanchandrasekara99@gmail.com</a> or whatsapp <span
-                    onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293 8630</span>.
+                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com">nuwanchandrasekara99@gmail.com</a>
+                or whatsapp <span onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293
+                    8630</span>.
                 I’m currently available for projects. <span>Thankyou</span></p>
             <button onclick="sayHi('Hi, I would like to know ')">Get in Touch</button>
         </div>
