--- a/index.html
+++ b/index.html
@@ -213,22 +213,22 @@
             <div class="icon icon-1">
                 <div><img src="/assets/icons/image 4 (Traced).svg" alt=""></div>
                 <h4>LEADERSHIP</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
+                <p>Let’s guide your project to success with strategic direction and vision.</p>
             </div>
             <div class="icon icon-2">
                 <div><img src="/assets/icons/image 6 (Traced).svg" alt=""></div>
-                <h4>INTTEGRITY</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
+                <h4>INTEGRITY</h4>
+                <p>Let’s build your project with trust, honesty, and ethical standards.</p>
             </div>
             <div class="icon icon-3">
                 <div><img src="/assets/icons/image 7 (Traced).svg" alt=""></div>
                 <h4>TEAMWORK</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
+                <p>Let’s collaborate to bring your project to life with collective expertise.</p>
             </div>
             <div class="icon icon-4">
                 <div><img src="/assets/icons/image 5 (Traced).svg" alt=""></div>
                 <h4>INNOVATION</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
+                <p>Let’s create your project with cutting-edge ideas and fresh solutions.</p>
             </div>
         </div>
     </div>
