--- a/index.html
+++ b/index.html
@@ -129,18 +129,24 @@
     <div class="nuone-tech-container">
         <div class="techs">
             <div class="tech tech-1">
-                <h2>Web Developer</h2>
-                <h3>Visionary Design Vanguard </h3>
+                <div>
+                    <h2>Web Developer</h2>
+                    <h3>Visionary Design Vanguard </h3>
+                </div>
                 <h4>April 2022 – September 2023</h4>
             </div>
             <div class="tech tech-3">
-                <h2>Web Developer</h2>
-                <h3>Freelance</h3>
+                <div>
+                    <h2>Web Developer</h2>
+                    <h3>Freelance</h3>
+                </div>
                 <h4>September 2023 – June 2024</h4>
             </div>
             <div class="tech tech-2">
-                <h2>Senior Web Developer</h2>
-                <h3>Visionary Design Vanguard </h3>
+                <div>
+                    <h2>Senior Web Developer</h2>
+                    <h3>Visionary Design Vanguard </h3>
+                </div>
                 <h4>June 2024 – Present</h4>
             </div>
             <!-- <div class="tech tech-4">
